--- a/index2.html
+++ b/index2.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Omar Machucho">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilos2.css">
     <title>Ejercicio Expresiones Regulares</title>
 </head>
 <body>
-    
-    <h5>Josué Omar Machucho Avilés</h5>
+    <div>
+    <p>Josué Omar Machucho Avilés</p>
     <p>Ingeniería en Sistemas Computacionales</p>
     <p>No. control: 17390346</p>
     <p id="d1"></p>
     <p id="d2"></p>
-    
+    </div>
     <script type="text/javascript" src="script2.js"></script>
 </body>
 </html>
